Fix horizontal overflow

--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,8 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    box-sizing: border-box;
+    /* box-sizing: border-box; */
+   
 }
 
 .iti__hide {
@@ -15,6 +16,7 @@
     width: 100%;
     overflow-y: scroll;
     scroll-snap-type: y mandatory;
+    overflow-x: hidden;
 }
 
 .slides {
